--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 .ContainerNav{
     background-color: black;
     width: 100%;
+    display:flex;
 }
 
 .LogoFoodLand{
@@ -8,11 +9,17 @@
     height: 80px;
     background-color: white;
     border-radius: 150px;
+    display: flex;
+    float: left;
 }
 
-.iconsNav{
-    width: 30px;
-    height: 30px;
+.iconsNav1{
+    width: 50px;
+    height: 50px;
+}
+.iconsNav2{
+    width: 40px;
+    height: 40px;
 }
 
 .ButtonNav{
@@ -22,6 +29,13 @@
     background-color: black;
 }
 
-.ButtonsNav{
 
+.ButtonsNav{
+    float: right;
+    margin-right:30px;
+}
+
+.LinkLogo{
+    display: flex;
+    flex:auto;
 }
