--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -1,6 +1,10 @@
 .ContainerNav{
     background-color: black;
     width: 100%;
+    display: flex;
+    height: 100px;
+    justify-content:space-between;
+    align-items: center;
 }
 
 .LogoFoodLand{
@@ -24,4 +28,10 @@
 
 .ButtonsNav{
 
+}
+
+/* ---------- SEARCH BAR ---------- */
+
+.SearchBar{
+    color:white
 }
