--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -10,6 +10,10 @@ border-radius: 120px;
     color: white;
     display: flex;
     justify-content: center;
+    /* position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0; */
 }
 .contact{
     margin-left: 20px;
