--- a/client/src/Components/Cards/Products.css
+++ b/client/src/Components/Cards/Products.css
@@ -1,24 +1,33 @@
 .contenedorProducts{
     display: flex;
     flex-direction: column;
+    padding: 5px;
 }
 
-.productos{
+.products{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 20px
+    gap: 60px;
 }
 
-.imgProducto{
-    width: 100px;
+.imgProduct{
+    width: 120px;
 }
 
-.producto{
+.productName{
+    width: 70%;
+}
+
+.product{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     padding: 20px;
     border: 4px black solid;
+    width: 200px;
+    height: 250px;
 }
