--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -7,8 +7,8 @@
 .LogoFoodLand{
     width: 80px;
     height: 80px;
-    background-color: white;
-    border-radius: 150px;
+    /* background-color: white;
+    border-radius: 150px; */
     display: flex;
     float: left;
 }
