--- a/client/src/Components/NavBar/SearchBar.css
+++ b/client/src/Components/NavBar/SearchBar.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: end;
     flex: auto;
+    margin-top:30px;
 }
 
 .Search{
@@ -11,15 +12,72 @@
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-    border-radius: 120px;
+    border:3px solid white;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 5.5px;
 }
 
-.input-icon {
-    color: #191919;
+.butonSearch{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 1px solid #fff;
+    color: #fff;
+    background-color: #4e7d48;
+    padding: 7px;
+
+}
+
+.Lup{
+    width: 18px;
+    height: 18px;
+}
+
+
+.ulNav, ol {
+    list-style:none;
+}
+
+
+.headerNavList {
+    margin:auto;
+    width:500px;
+}
+
+.OptionsNav > li {
+    float:left;
+}
+
+.OptionsNav li a {
+    background-color:#000;
+    color:#fff;
+    text-decoration:none;
+    padding:10px 12px;
+    position:absolute;
+    min-width:140px;
+    display:none;
+}
+
+.OptionsNav li a:hover {
+    display:block;
     position: absolute;
-    width: 20px;
-    height: 20px;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
- }
+}
+
+.OptionsNav li ul {
+    display:none;
+    position:absolute;
+    min-width:140px;
+}
+
+.ulNav :hover > ul {
+    display:block;
+}
+
+.ulNav .mainNav ul li {
+    position:relative;
+}
+
+.ulNav .mainNav ul li ul {
+    right:-140px;
+    top:0px;
+}
