Actions Searchbar & Suscribe
Add Actions Post & Get on components

--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
 
 .LogoFoodLand{
     background-color: white;
-    border-radius: 150px;
+    /* border-radius: 150px; */
     width: auto;
     height: 120px;
     /* background-color: white;
