--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -29,8 +29,9 @@ border-radius: 120px;
 }
 
 .LogoHenry{
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
+    margin:10px;
 }
 
 .MenuFooter{
@@ -56,3 +57,31 @@ border-radius: 120px;
     color:black;
     background-color: rgb(198, 198, 198);
 }
+
+.iconFooterSocial{
+    width: 50px;
+    height: 50px;
+    margin:10px;
+}
+
+.SuscribeEmail{
+    width: 10vw;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    border:3px solid white;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 5.5px;
+}
+
+.SuscribeButton{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 2px solid #fff;
+    color: #fff;
+    background-color: #4e7d48;
+    padding-top: 11px;
+    padding-bottom: 8px;
+}
+    
