new flow products

--- a/client/src/Views/Detail/DetailCard.css
+++ b/client/src/Views/Detail/DetailCard.css
@@ -9,19 +9,20 @@
 .detail-img {
   
 width: 50%;
-
+display: flex;
+justify-content: flex-end;
 }
 .detail-img img {
-width: 80%;
-
-
+width: 70%;
 }
+
 .detail-info {
   
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 5%;
 }
 
 .detail-info h1 {
@@ -61,3 +62,10 @@ margin-top: 0;
     font-weight: 500;
     border-radius: 7px;
 }
+
+.contador {
+    display: flex;
+    justify-content: space-between;
+    
+ width: 15%;
+ }
