--- a/client/src/Components/FormCreateProduct/FormCreateProduct.css
+++ b/client/src/Components/FormCreateProduct/FormCreateProduct.css
@@ -1,16 +1,24 @@
 .createProductContainer{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: fit-content;
+    margin-bottom: 20px;
+}
+
+.containerAux{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .formCreateProduct{
     display: flex;
     flex-direction: column;
     width: fit-content;
+    height: fit-content;
     border: 2px black solid;
     padding: 20px;
 }
@@ -19,8 +27,33 @@
     display: flex;
     flex-direction: column;
     font-size: 23px;
+    gap: 5px;
+
 }
 
 .input{
     font-size: 20px;
+    border: 2px black solid;
+    border-radius: 20px;
+    text-align: center;
+    gap: 5px;
+}
+
+.btn{
+    margin-top: 20px;
+    font-size: 20px;
+    border: none;
+    border-radius: 20px;
+    width: 200px;
+    height: 40px;
+    color: aliceblue;
+    background-color: black;
+}
+
+.containerPreview{
+    display: flex;
+    flex-direction: column;
+    border: 2px black solid;
+    width: 200px;
+    height: 400px;
 }
