--- a/client/src/Components/FormCreateProduct/FormCreateProduct.css
+++ b/client/src/Components/FormCreateProduct/FormCreateProduct.css
@@ -51,9 +51,12 @@
 }
 
 .containerPreview{
+    box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.247);
+    border-radius: 10px;
+    padding:10px 0 10px 0;
     display: flex;
     flex-direction: column;
-    border: 2px black solid;
-    width: 200px;
-    height: 400px;
+    justify-content:space-between;
+    align-items:center;
+    color: black;
 }
