--- a/client/src/Components/Cards/cards.css
+++ b/client/src/Components/Cards/cards.css
@@ -13,6 +13,39 @@ width: 15%;
 margin: 2%;
 text-decoration: none;
 }
+
+/* ------- PRODUCTS CONTAINER -------- */
+.productsContainer {
+display: flex;
+flex-direction: column;
+justify-content: center;
+}
+
+.selectDiv {
+    margin-left: 65%;
+    margin-top: 2%;
+   
+}
+
+.selectInput {
+height: 35px;
+width: 32%;
+border-radius: 7px;
+border: 3px solid rgb(5, 184, 5);
+box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.247);
+background-color: rgb(255, 244, 244);
+font-size: 15px;
+}
+
+/* ------- PAGINADO ------------ */
+
+.btnPag{ height: 40px; width: 3.5%; border-radius: 7px; margin: 0 2px 0 2px}
+
+.containerPaginated{
+    margin-bottom: 5%;
+    margin-top: 2%;
+}
+
 /* ---- CATEGORY CARD  ------ */
 
 .CategoryCard{
@@ -48,9 +81,15 @@ text-decoration: none;
     align-items:center;
     color: black;
     height: 100%;
-   
 }
 
+.product:hover, .selectInput:hover, .product .addButton:hover {
+    box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.589);
+}
+
+.addButton:hover {
+    box-shadow: 3px 4px 18px rgba(0, 0, 0, 0.774);
+}
 .product .addButton {
     width: 70%;
 }
@@ -72,3 +111,5 @@ text-decoration: none;
     width: 130px;
   
 }
+
+
