Creacion de About

--- a/client/src/Views/Home/Home.css
+++ b/client/src/Views/Home/Home.css
@@ -1,4 +1,4 @@
-.ContainerHome{
+/* .ContainerHome{
     display: flex;
     height: 100vh;
     width: 100%;
@@ -8,4 +8,4 @@
 .productos{
     margin-top: 200px;
     margin-bottom: 200px;
-}
+} */
