--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -1,18 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400&family=Yanone+Kaffeesatz:wght@300;400;700&display=swap');
+
 .ContainerNav{
     background-color: black;
     width: 100%;
     display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .LogoFoodLand{
-    background-color: white;
-    /* border-radius: 150px; */
     width: auto;
-    height: 120px;
-    /* background-color: white;
-    border-radius: 150px; */
+    height: 60px;
     display: flex;
-    float: left;
+    /* padding: 30px; */
+    /* float: left; */
 }
 
 .iconsNav1{
@@ -25,6 +27,8 @@
 }
 
 .ButtonNav{
+    display: flex;
+    flex-direction: row;
     width: 80px;
     height: 80px;
     border-radius: 120px;
@@ -33,13 +37,24 @@
 
 .ButtonsNav{
     margin-right: 30px;
-    display: inline-block;
+    display: flex;
     align-self: self-end;
+}
+
+.linkNavbar{
+    color: aliceblue;
+    text-decoration: none;
+    font-size: 30px;
+    font-family: "Yanone Kaffeesatz" ;
+}
+
+.linkNavbar:hover{
+    color: #30925e ;
 }
 
 .LinkLogo{
     display: flex;
-    flex:auto;
+    /* flex:auto; */
 }
 
 .headerNavList{
@@ -56,12 +71,16 @@ ul, ol {
 }
 
 .nav{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
     margin-right: 20px;
 }
 
 .nav > li {
-    float:left;
-    margin-right: 20px;
+    display: flex;
+    flex-direction: row;
+    /* margin-right: 20px; */
 }
 
 .nav li{
