--- a/client/src/Components/NavBar/SearchBar.css
+++ b/client/src/Components/NavBar/SearchBar.css
@@ -1,10 +1,10 @@
 .ContainerSearch{
-    height: 50px;
+    /* height: 50px; */
     width: auto;
     display: flex;
     align-items: end;
-    flex: auto;
-    margin-top:30px;
+    /* flex: auto; */
+    /* margin-top:30px; */
 }
 
 .Search{
