--- a/client/src/Components/Cards/cards.css
+++ b/client/src/Components/Cards/cards.css
@@ -1,107 +1,54 @@
-/* ----- CARD CONTAINER ------ */
+/* ----- CATEGORY CONTAINER ------ */
 
-.CardContainer {
-    display: flex;
-    flex-wrap: wrap;
-justify-content: center;
-margin:3% 0 3% 0;
-
-}
-
-.CardContainer a{
-width: 15%; 
-margin: 2%;
-text-decoration: none;
-}
-
-/* ------- PRODUCTS CONTAINER -------- */
-.productsContainer {
+.categoryContainer {
 display: flex;
 flex-direction: column;
-justify-content: center;
+align-items: center;
 }
 
-.breadcrumb{
-    display: flex;
-    margin-left: 5%;
-    width: 35%;
+.carrousel {background-color: rgba(95, 110, 110, 0.445);
+    
 }
-.breadcrumb a {
-    font-size: 16px;
+
+/* ----- CARD CONTAINER ------ */
+
+.CardContainerCat {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 1% 0 3% 0;
+    /* background-color: rgb(198, 226, 43); */
+    width: 100%;
+    justify-content: center;
+}
+
+.CardContainerCat a{
+    margin: 2% 3% 2% 3%;
+    width: 17%;
     text-decoration: none;
-  
-    width: 35%;
-    margin-left: -10%;
-    display: flex;
-    color: black;
-   
+    
 }
-.breadcrumb a:hover{
+
+
+
+/* ------ BREADCRUMB ------ */
+
+.breadcrumbContainer{
+    /*background-color: blueviolet;*/
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    margin-top:2%
+}
+
+.breadcrumb {
+    /*background-color: green; */
+    margin-left:2%;
+}
+
+.breadcrumb a:hover {
     color: greenyellow;
 }
-.select_and_breadcrumb {
-display: flex;
 
-justify-content: space-between;
-align-items: flex-end;
-margin-top: 2%;
-margin-bottom: 2%;
-
-}
-
-.selectInput {
-height: 35px;
-width: 15%;
-margin-right:5%;
-border-radius: 7px;
-border: 3px solid rgb(5, 184, 5);
-box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.247);
-background-color: rgb(255, 244, 244);
-font-size: 15px;
-}
-
-
-/* ---------- FILTROS ---------*/
-fieldset{
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-    text-align: justify;
-    float:left;
-    height: auto;
-    border-radius: 5px;
-    background-color: rgb(211,211,211);
-    box-shadow: 3px 4px 12px rgb(0, 0 ,0,25%);
-    border: none;
-    margin-left: 5%;
-}
-
-.MinMax{
-    display: flex;
-}
-
-.Range{
-    width:50px;
-    border-radius: 5px;
-}
-
-.butonFilter{
- background-color: #4e7d48;
- color: white;
- border-radius: 20px;
-}
-.filterContainer{
-background-color: aqua;
-}
-
-/* ------- PAGINADO ------------ */
-
-.btnPag{ height: 40px; width: 3.5%; border-radius: 7px; margin: 0 2px 0 2px}
-
-.containerPaginated{
-    margin-bottom: 5%;
-    margin-top: 2%;
-}
 
 /* ---- CATEGORY CARD  ------ */
 
@@ -111,7 +58,11 @@ background-color: aqua;
     border-radius: 10px;
     box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.247);
     padding: 5px;
-
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .CategoryCard img { 
@@ -124,49 +75,163 @@ background-color: aqua;
 }
 
 
+/* ------- PRODUCTS CONTAINER -------- */
+.productsContainer {
+display: flex;
+flex-direction: column;
+justify-content: center;
+}
+
+.select_and_breadcrumb {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2%;
+  align-items: flex-end;
+}
+
+.select_and_breadcrumb .breadcrumb {
+    margin-left: 2%;
+    display: flex;
+    width: 51%;
+    justify-content: flex-start;
+    align-items: center;}
+
+.select_and_breadcrumb .breadcrumb p {
+    margin-left: 1%;
+    margin-right: 1%;
+    color: green;
+}
+
+.selectInput{
+height: 35px;
+width: 15%;
+margin-right:5%;
+border-radius: 7px;
+border: 3px solid rgb(5, 184, 5);
+box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.247);
+background-color: rgb(255, 244, 244);
+font-size: 15px;
+
+}
+
+.filter_and_products{
+    display: flex;
+    margin-top: 2%;
+}
+
+.CardContainerProd {
+    display: flex;
+    flex-direction: column;
+    width: 76%;
+}
+
+.sidebar {
+  border-right: 1px solid #ccc;
+  width: 23%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.products {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 1%;
+    margin-bottom: 3%;
+    align-items: flex-end;
+}
+
 
 /* ---- PRODUCTS CARDS ----- */
 
 
-.product {
-    box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.247);
-    border-radius: 10px;
-    padding:10px 0 10px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content:space-between;
-    align-items:center;
-    color: black;
-    height: 100%;
+.productCard {
+        width: 24%;
+        padding: 15px;
+        height: 100%;
+        box-shadow: 3px 4px 12px rgb(0 0 0 / 25%);
+        border-radius: 10px;
+        text-decoration: none;
+    }
+
+.product h3 {
+    color: #484848;
+    font-weight: 500;
+    margin-bottom: 0;
+    }
+.product p {    
+    color: red;
+    margin-bottom: 4%;
+    margin-top: 5%;}
+
+.product .addButton {
+    width: 70%;
+    margin-top: 7%;
+    margin-bottom: 2%;
 }
 
+.product .addButton:hover {
+    box-shadow: 3px 4px 18px rgba(0, 0, 0, 0.774);
+}
+
+.product img {
+    width: 130px;
+}
+
+/*
 .product:hover, .selectInput:hover, .product .addButton:hover {
     box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.589);
 }
 
-.addButton:hover {
-    box-shadow: 3px 4px 18px rgba(0, 0, 0, 0.774);
-}
-.product .addButton {
-    width: 70%;
-}
-
-.product h3 {
-    font-weight: 400;
-    font-size: 16px;
-    margin-bottom: 0;
-    margin-top: 10px;
-    padding:0 10px 0 10px;
-}
-.product p {
-    color: red;
-    font-weight: 700;
-    margin-top: 3px;
-    margin-bottom: 3px;
-}
-.product img {
-    width: 130px;
-  
-}
 
 
+/* ---------- FILTROS ---------*/
+fieldset{
+    margin-top: 4%;
+    border-radius: 5px;
+    background-color: rgb(173 173 173 / 52%);
+    box-shadow: 3px 4px 12px rgb(0 0 0 / 25%);
+    border: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 81%;
+}
+
+.MinMax{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3%
+}
+
+fieldset label {
+    margin-bottom: 3%;
+    margin-top: 3%;
+}
+.MinMax input {
+    width:33%;
+    margin-right: 2%;
+    margin-left: 2%;
+}
+.Range{
+    
+    border-radius: 5px;
+}
+
+.butonFilter{
+ background-color: #4e7d48;
+ color: white;
+ border-radius: 20px;
+}
+
+
+/* ------- PAGINADO ------------ */
+
+.btnPag{ height: 40px; width: 4.5%; border-radius: 7px; margin: 0 2px 0 2px}
+
+.containerPaginated{
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
