Correccion del Form de crear producto

--- a/client/src/Components/FormCreateProduct/FormCreateProduct.css
+++ b/client/src/Components/FormCreateProduct/FormCreateProduct.css
@@ -91,3 +91,10 @@
 .vsImg{
     width: 400px;
 }
+
+.errorFormCP{
+  color: red;
+  font-size: 15px;
+  margin-top: -10px;
+  margin-bottom: -20px;
+}
