--- a/client/src/Views/Login/signinScreen.css
+++ b/client/src/Views/Login/signinScreen.css
@@ -1,26 +1,3 @@
-/* .formLogin {
-	max-width: 25rem;
-	margin: 0 auto;
-}
-.formLogin > div {
-	display: flex;
-	flex-direction: column;
-	margin: 1rem;
-}
-.formLogin label {
-	margin: 1rem 0;
-}
-
-input:hover, button:hover{
-	border: 0.1rem #404040 solid 
-}
-button.primary{
-	cursor: pointer;
-    background-color: #f0c040;
-	padding: 0.2rem
-} */
-
-
 .loginContasiner {
 	display: flex;
 	justify-content: center;
@@ -96,4 +73,11 @@ button.primary{
 	right: 20px;
 	top: 100px  ;
 	transform: scaleX(-1);
+}
+
+
+.btnHomeRegisterContainer{
+    position: absolute;
+    top: 100px;
+    left: 0;
 }
