--- a/client/src/Views/Register/Register.css
+++ b/client/src/Views/Register/Register.css
@@ -2,5 +2,22 @@
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-color: rgba(216, 216, 216, 0.748);
+}
+
+.btnHomeRegisterContainer{
+    position: absolute;
+    top: 100px;
+    left: 0;
+}
+
+.imgARegister{
+    position: absolute;
+	left: 20px;
+    bottom: 0;
+}
+.imgBRegister{
+	position: absolute;
+	right: 20px;
+	top: 100px  ;
+	transform: scaleX(-1);
 }
