--- a/client/src/Components/NavBar/SearchBar.css
+++ b/client/src/Components/NavBar/SearchBar.css
@@ -81,3 +81,10 @@
     right:-140px;
     top:0px;
 }
+
+span.userName{
+    background-color: #0000 !important;
+    color: white !important;
+    display:flex !important;
+    align-items: center !important;
+}
