--- a/client/src/Components/Cards/cards.css
+++ b/client/src/Components/Cards/cards.css
@@ -242,7 +242,11 @@
     
     /* ------- PAGINADO ------------ */
     
-    .btnPag{ height: 40px; width: 4.5%; border-radius: 7px; margin: 0 2px 0 2px}
+    .btnPag{ 
+        height: 40px;
+        width: 4.5%;
+        border-radius: 7px;
+        margin: 0 2px 0 2px}
     
     .containerPaginated{
         margin-top: 3%;
