--- a/client/src/Views/MyCart/MyCart.css
+++ b/client/src/Views/MyCart/MyCart.css
@@ -62,7 +62,7 @@
     color: white;
     font-weight: bolder;
     text-decoration:none;
-
+    font-size: xx-large;
   }
   
   .page{
@@ -436,10 +436,11 @@
   }
 
   .butonBack{
-    background-color: #4e7d48;
+    background-color:  rgb(29, 121, 29);
     color:white;
-    padding: 5px;
+    padding: 15px;
     border-radius: 20px;
+    border: 2px solid  rgb(29, 121, 29);
     box-shadow: 3px 4px 12px rgb(0, 0 ,0,25%);
   }
   .butonBack Link{
@@ -448,5 +449,5 @@
   }
   .ButonReturn p{
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 30px;
   }
