--- a/client/src/Components/Cards/cards.css
+++ b/client/src/Components/Cards/cards.css
@@ -246,7 +246,7 @@
         height: 40px;
         width: 4.5%;
         border-radius: 7px;
-        margin: 0 2px 0 2px}
+        margin: 0 2px 4px 2px}
     
     .containerPaginated{
         margin-top: 3%;
