--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -86,10 +86,11 @@ ul, ol {
 .nav li{
     background-color: #0E0E0E;
 }
-.nav li:hover{
+.nav li img:hover{
     background-color: rgb(228, 227, 227);
     border-top-right-radius:23px;
     border-top-left-radius:23px;
+    transition: transform 2s;
 }
 
 .nav li span{
@@ -130,7 +131,7 @@ ul, ol {
     background-color: rgb(205, 203, 203);
     color: black;
     text-decoration: none;
-    width: 180px;
+    width: 213px;
     border-radius: 5px;
     cursor: pointer;
     display: flex;
@@ -197,4 +198,24 @@ ul, ol {
 }
 .background .span1:hover{
     background-color: #b7b6b6;
+}
+
+.span .username:hover{
+    width: auto;
+    margin-left: -11px;
+    background-color: black;
+}
+
+span.userName{
+    background-color: #0000 !important;
+    color: white !important;
+    display:flex !important;
+    align-items: center !important;
+    margin-left: -11px;
+    margin-right: -176px;
+    }
+    
+span.userName:hover{
+    background-color: #0000 !important;
+    color: white !important;
 }
