--- a/client/src/Components/Carrousel/Carrousel.css
+++ b/client/src/Components/Carrousel/Carrousel.css
@@ -7,11 +7,11 @@
   width: 100%;
 }
 .carrousel img {
-    width: 55%;
-  
+  width: 81%;
+  height: 200px;
 }
 .carrousel div {
-    background-color: rgb(94, 214, 39);
+    background-color: #cdcdcd5c;
     display: flex;
 align-items: center;
 
