Update My Cart , Checkout & Log in
Segun yo , solo me falta poner la URL y ya se manda la orden

--- a/client/src/Components/Checkout/CheckOut.css
+++ b/client/src/Components/Checkout/CheckOut.css
@@ -5,7 +5,7 @@
     box-shadow: 3px 4px 12px rgb(0, 0 ,0,25%);
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 25%;
     height: fit-content;
 }
 
@@ -22,17 +22,22 @@
     height: 10px;
     background-color: rgb(32, 32, 32);
     writing-mode: vertical-rl;
+    margin:5px;
 }
 .ContainerPayment h2{
     display: flex;
     justify-content: space-between;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 7px 50px 0px 50px;
     }
 
 .ContainerPayment h2 span{
 color: green;
 }
+
+.ContainerPayment h3{
+    margin:5px;
+    }
+
 .ContainerPayment button{
     color: white;
     background-color: rgb(29, 121, 29);
@@ -40,7 +45,7 @@ color: green;
     cursor: pointer;
     margin: inherit;
     padding: 20px;
-    font-size: 30px;
+    font-size: 25px;
     border-radius: 20px;
     border: 2px solid rgb(29, 121, 29);
     width: 224px;
