--- a/client/src/Views/MyCart/MyCart.css
+++ b/client/src/Views/MyCart/MyCart.css
@@ -60,7 +60,6 @@
   
   .ButonReturn a{
     color: white;
-    font-weight: bolder;
     text-decoration:none;
     font-size: xx-large;
   }
@@ -349,12 +348,11 @@
   }
   
   .cart_item li p {
-    font-size: 1.7em;
     font-weight: 700;
   }
   
   .cart_item li span {
-    font-size: 1.3em;
+    font-size: 13px;
   }
   
   .cart_item li h2 {
