--- a/client/src/Components/Stock/Stock.css
+++ b/client/src/Components/Stock/Stock.css
@@ -76,6 +76,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    cursor: pointer;
     }
     
     .pagination button {
