--- a/client/src/Components/FormRegisterUser/registerScreen.css
+++ b/client/src/Components/FormRegisterUser/registerScreen.css
@@ -33,10 +33,11 @@
   }
   
   .formRegister .labelCreateUser label {
-    width: 100px;
-  }
-  
-  .formRegister .inputCreateUser {
+    width: 150px;
+    margin: 0.5rem;
+}
+
+.formRegister .inputCreateUser {
     padding: 10px;
     font-size: 18px;
     border-radius: 5px;
@@ -53,6 +54,7 @@
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
+    margin: 0.5rem;
   }
   
   .formRegister button[type="submit"]:hover {
