--- a/client/src/Views/Login/signinScreen.css
+++ b/client/src/Views/Login/signinScreen.css
@@ -102,3 +102,14 @@
     background-color: #29b66b;
   }
   
+  .login_google{
+    padding: 10px 20px;
+    background-color: #5524a5;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+	font-size: 17px;
+	cursor: pointer;
+	margin-bottom: 20px;
+  margin-left: 3px;
+  }
