Cambios en el css

--- a/client/src/Views/Home/Home.css
+++ b/client/src/Views/Home/Home.css
@@ -21,8 +21,8 @@
     justify-content: center;
     justify-content: flex-start;
     background-color: gray;
-    /* margin: 10px; */
-    /* border-radius: 20px; */
+    margin: 10px;
+    border-radius: 20px;
 
 }
 
