--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -155,8 +155,8 @@ ul, ol {
     z-index: 50;
     min-width: 140px;
     padding: 0px;
-    margin-left: -220px;
-    margin-top: 50px;
+    margin-left: -13.8%;
+    margin-top: 3.3%;
     width: 17.1%;
 }
 
