--- a/client/src/Components/ListUser-Admin/Users.css
+++ b/client/src/Components/ListUser-Admin/Users.css
@@ -98,3 +98,36 @@
   .pagination button:hover:not(.active) {
       background-color: #4CAF50;
   }
+
+.searchListUsers{
+    width: 22vw;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    border: 2px solid #ababab;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 5.5px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.324);
+}
+
+.searchUser{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 2px solid #ababab;
+    color: #fff;
+    background-color: #4e7d48;
+    padding: 4.7px 6px 6.5px 6px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.324);
+}
+
+.sortList{
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    border: 2px solid #ababab;
+    border-radius: 10px;
+    padding: 5.5px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.324);
+    color: #4e7d48;
+}
