--- a/client/src/Views/Order/placeOrderScreen.css
+++ b/client/src/Views/Order/placeOrderScreen.css
@@ -9,31 +9,31 @@
 .Form-Shipping{
     display: inline-flex;
     justify-content: space-between;
-    padding: 12px;
+    padding: 20px;
     background-color: rgb(228, 227, 227);
     border-radius: 20px;
     box-shadow: 3px 4px 12px rgb(0 0 0 / 25%);
-    width: auto;
     height: fit-content;
+    width: min-content;
 }
 
 .formInput{
-    display: inline-grid;
+    display: grid;
     text-align-last: start;
 }
 
 .formInput label{
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bolder;
     display: flex;
-    justify-self: right;
+    /* justify-self: right; */
     margin-bottom: 5px;
 }
 
 .formInput label input{
     font-size: 22px;
     margin-left: 10px;
-    width: 100%;
+    /* width:  400px; */
     border-radius: 11px;
 }
 
@@ -228,4 +228,34 @@ align-self:end;
 .UsersInfo{
     text-align-last: auto;
     padding: 0px 15px;
+}
+
+.buttonPaypal{
+    width: 45%;
+    margin: 20px auto;
+}
+
+.formInput div h3{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    font-size: larger;
+    color:rgb(29, 121, 29);
+}
+
+.postal{
+    width: 25%;
+    margin-right: 6px;
+}
+
+.ShippingInfo h3{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    font-size: larger;
+    color:rgb(29, 121, 29);
+}
+
+.ShippingInfo{
+
 }
