Historial de compra TERMINADO

--- a/client/src/Components/UserOrders/UserOrders.css
+++ b/client/src/Components/UserOrders/UserOrders.css
@@ -8,6 +8,11 @@
     width: 100%;
     border-collapse: collapse;
     text-align: center;
+    justify-content: flex-end;
     border-radius: 20px;
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.324);
+}
+
+.orderTableUser table td{
+    vertical-align: bottom;
 }
