--- a/client/src/Components/Stock/Stock.css
+++ b/client/src/Components/Stock/Stock.css
@@ -108,3 +108,9 @@
         font-size: 30px;
         margin-bottom: -20px;
     }
+
+    .inactive {
+        color: gray;
+        text-decoration: line-through;
+      }
+      
