--- a/client/src/Components/Stock/Stock.css
+++ b/client/src/Components/Stock/Stock.css
@@ -23,7 +23,7 @@
     
 
     .thStock1{
-        background-color: #4CAF50;
+        background-color: #30925e ;
         color: white;
         font-size: 18px;
         padding: 10px;
@@ -31,13 +31,13 @@
         border-top-left-radius: 20px;  
     }
     .thStock2{
-        background-color: #4CAF50;
+        background-color: #30925e;
         color: white;
         font-size: 18px;
         padding: 10px;
     }
     .thStock3{
-        background-color: #4CAF50;
+        background-color: #30925e;
         color: white;
         font-size: 18px;
         padding: 10px;
