Arreglos en el css

--- a/client/src/Views/Detail/DetailCard.css
+++ b/client/src/Views/Detail/DetailCard.css
@@ -3,9 +3,7 @@
     justify-content: center;
     align-items: center;
     align-items: flex-start;
-    height: 600px;
     margin-top: 3%;
-
 }
 
 
@@ -23,29 +21,27 @@
     color: green;
 }
 .detail-img {
-  
 width: 50%;
 display: flex;
-justify-content: flex-end;
+justify-content: center;
 }
 .detail-img img {
 width: 56%;
 }
 
 .detail-info {
-  
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 6%;
 }
 
 
 .detail-info h1 {
 padding-top: 5px;
 margin-top: 0;
-
+width: 80%;
+text-align: start;
 }
 .detail-info h2{
   color: red;
@@ -53,11 +49,12 @@ margin-top: 0;
   margin-top: 7%;
 }
 .detail-info h4 {
- 
     margin-bottom: 0;
 }
 
 .detail-info span {
+    text-align: start;
+    width: 80%;
     margin-bottom: 3%;
 }
 
@@ -150,4 +147,18 @@ margin-top: 0;
 }
 .BuyNow a:hover{
     background-color: rgb(67, 111, 52);
+}
+
+.addButton2 {
+    width: 300px;
+    height: 35px;
+    background-color: #b21616;
+    margin-top: 7%;
+    margin-bottom: 2%;
+    border: transparent;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 7px;
+    box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.623);
+    color: white;
 }
