--- a/client/src/Views/Order/placeOrderScreen.css
+++ b/client/src/Views/Order/placeOrderScreen.css
@@ -142,6 +142,18 @@
     border: 2px solid rgb(29, 121, 29);
     width: 213px;
 }
+.PlaceOrder:disabled{
+    color: white;
+    background-color: rgb(121, 29, 29);
+    box-shadow: 3px 4px 12px rgb(0 0 0 / 25%);
+    cursor: pointer;
+    margin: 20px auto;
+    padding: 20px;
+    font-size: 30px;
+    border-radius: 20px;
+    border: none;
+    width: 213px;
+}
 
 .Shippingtitle{
     font-weight: bolder;
@@ -254,8 +266,4 @@ align-self:end;
     justify-content: center;
     font-size: larger;
     color:rgb(29, 121, 29);
-}
-
-.ShippingInfo{
-
 }
