Actualizacion de css y bugs

--- a/client/src/Views/About/About.css
+++ b/client/src/Views/About/About.css
@@ -1,18 +1,20 @@
-.aboutContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    gap: 50px;
+.aboutContainer {
+  margin: 20px auto;
+  max-width: 80%;
+  border-radius: 20px;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.titleAbout{
-    align-self: flex-start ;
+.titleAbout {
+  font-size: 2rem;
+  margin-bottom: 10px;
+  text-align: center;
 }
-.textAbout{
-    display: flex;
-    text-align: justify;
-    width: 70%;
-    margin-top: 42px;
+
+.textAbout {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  text-align: justify;
 }
