--- a/client/src/Components/Cards/cards.css
+++ b/client/src/Components/Cards/cards.css
@@ -266,3 +266,28 @@
         margin-bottom: 5%;
     }
     
+
+    .btnAdminHome{
+        position: absolute;
+        left: 0;
+        top: 65%;
+        background-color: #4e7d48;
+        color: #ccc;
+        border: none;
+        font-size: 20px;
+        font-style: bold;
+        padding: 10px;
+        width: 5%;
+    }
+    .btnAdminHome2{
+        position: absolute;
+        left: 0;
+        top: 18%;
+        background-color: #4e7d48;
+        color: #ccc;
+        border: none;
+        font-size: 20px;
+        font-style: bold;
+        padding: 10px;
+        width: 5%;
+    }
