--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -221,3 +221,9 @@ span.userName:hover{
     background-color: #0000 !important;
     color: white !important;
 }
+
+.btnHomeAdmin{
+    font-size: 109%;
+    color: white;
+    margin-right: 2em;
+}
