--- a/client/src/Components/Stock/Stock.css
+++ b/client/src/Components/Stock/Stock.css
@@ -4,13 +4,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
-    width: 1200px;
+    margin: 2%;
+    width: 120%;
     }
     
     .stockList h1 {
-    font-size: 28px;
-    margin-bottom: 20px;
+    font-size: 2rem;
+    margin-bottom: 2rem;
     }
     
     .stockList table {
