--- a/client/src/Views/Home/Home.css
+++ b/client/src/Views/Home/Home.css
@@ -8,13 +8,20 @@
     text-align: left;
 }
 
+.admBtnContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 8%;
+}
+
 .listAdm{
     display: block;
-    height: 40px;
+    height: 10%;
     width: 140px;
-    font-size: 20px;
+    font-size: 1.3rem;
     cursor: pointer;
     margin-top: 100%;
+    
 }
 .listAdm:hover{
     text-decoration: underline;
@@ -24,7 +31,7 @@
     color: red;
     display: block;
     width: 200px;
-    font-size: 20px;
+    font-size: 1.3rem;
     cursor: pointer;
     margin-top: 100%;
 }
