--- a/client/src/Components/Charts/Charts.css
+++ b/client/src/Components/Charts/Charts.css
@@ -4,6 +4,7 @@
     margin-top: 4%;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 5%;
 }
 .chart1{
     display: flex;
@@ -39,19 +40,26 @@
     box-shadow: 3px 4px 12px rgb(0 0 0 / 25%);
     border-radius: 10px;
     margin-top: 5%;
+
 }
   
 .card{
-    width: 100%;
-    display: inline-block;
     width: 80%;
-    border: 1px solid gray;
+    background-color: white;
+    border-radius: 7px;
+    border: 4px solid #00979c;
     display: flex;
     flex-direction: column;
+    height: 14rem;
     align-items: center;
+    padding: 3%;
+    justify-content: space-between;
 }
 .card p, h4 {
     margin: 0;
+}
+.sliderMasVendidos{
+    padding-top: 5%;
 }
 .sliderMasVendidos img {
     width: 110px;
