--- a/client/src/Components/EditProfile/EditProfile.css
+++ b/client/src/Components/EditProfile/EditProfile.css
@@ -1,6 +1,4 @@
-.EditProfileContainer{
 
-}
 .EditProfileContainer form{
     display: grid;
     /* justify-items: left; */
@@ -9,4 +7,28 @@
     /* padding: 2%; */
     text-align: -webkit-right;
     width: fit-content;
+}
+
+.cancelbuton{
+    background-color: rgba(235, 17, 17);
+    color: white;
+    border: 1px solid rgba(235, 17, 17);
+    border-radius: 5px;
+    box-shadow: 2px 4px 8px rgb(0 0 0 / 50%);
+    height: 34px;
+    margin-right: 2%;
+}
+
+.cancelbuton:hover{
+    background-color: rgb(226, 92, 92);
+}
+
+button.cancelbuton{
+    background-color: rgba(235, 17, 17);
+    color: white;
+    border: 1px solid rgba(235, 17, 17);
+    border-radius: 5px;
+    box-shadow: 2px 4px 8px rgb(0 0 0 / 50%);
+    height: 34px;
+    margin-right: 2%;
 }
