--- a/client/src/Views/UserProfile/UserProfile.css
+++ b/client/src/Views/UserProfile/UserProfile.css
@@ -45,7 +45,9 @@
     border-left: 1px dashed rgba(45, 90, 55, 0.685);
     background-color: rgba(128, 128, 128, 0.062);
     font-family: "Yanone Kaffeesatz";
-    letter-spacing:0.5px
+    letter-spacing:0.5px;
+    border-top-right-radius: 22px;
+    border-bottom-right-radius: 22px;
 }
 
 .profileCard .right h1 {
@@ -64,8 +66,6 @@
 .profileCard .right h3 span{
  font-weight: 600;
 }
-
-
 
 .left-btns {
     display: flex;
