--- a/client/src/Components/OdersAdmin/OrdersAdmin.css
+++ b/client/src/Components/OdersAdmin/OrdersAdmin.css
@@ -7,16 +7,18 @@
 }
 
 .tablaAdmin{
-    width: 1200px;
+    width: 92%;
     border-collapse: collapse;
     text-align: center;
     justify-content: flex-end;
     border-radius: 20px;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.324);
+    box-shadow: 0 0 50px rgb(0 0 0 / 32%);
+    margin-left: 5%;
+    height: 582px;
 }
 
 .orderTableAdmin table tr{
-    vertical-align: bottom;
+    /* vertical-align: bottom; */
 }
 
 
@@ -24,5 +26,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: fit-content;    
+    /* height: fit-content; */
+    width: 78%;
+}
+
+.productListOrder{
+    font-size: 13px;
+}
+
+.restriccion{
+    width: 400px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
