--- a/client/src/Components/Stock/Stock.css
+++ b/client/src/Components/Stock/Stock.css
@@ -19,6 +19,7 @@
     text-align: center;
     border-radius: 20px;
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.324);
+    height: 610px;
     }
     
 
@@ -113,4 +114,15 @@
         color: gray;
         text-decoration: line-through;
       }
-      
+    
+    .ContainerStockList{
+        width: 78%;
+    }
+
+    .svContainer{
+        width: 90%;
+    }
+
+    .searchFilters{
+        width: 120%;
+    }
