--- a/client/src/Components/Stock/Stock.css
+++ b/client/src/Components/Stock/Stock.css
@@ -108,6 +108,7 @@
         font-family: "Yanone Kaffeesatz";
         font-size: 30px;
         margin-bottom: -20px;
+        /* width: 117%; */
     }
 
     .inactive {
