--- a/client/src/Components/Cards/cards.css
+++ b/client/src/Components/Cards/cards.css
@@ -155,7 +155,7 @@
         gap: 30px;
     
     }
-    
+
     
     /* ---- PRODUCTS CARDS ----- */
     
@@ -216,8 +216,8 @@
     /* ---------- FILTROS ---------*/
     fieldset{
         margin-top: 4%;
-        border-radius: 5px;
-        background-color: rgb(173 173 173 / 52%);
+        border-radius: 15px;
+        background-color: rgb(173 173 173 / 30%);
         box-shadow: 3px 4px 12px rgb(0 0 0 / 25%);
         border: none;
         display: flex;
@@ -242,16 +242,29 @@
         margin-left: 2%;
     }
     .Range{
-        
         border-radius: 5px;
     }
     
     .butonFilter{
-     background-color: #4e7d48;
-     color: white;
-     border-radius: 20px;
+    background-color: #4e7d48;
+    color: white;
+    border-radius: 20px;
+    border:2px solid  #4e7d48;
     }
-    
+        
+    .ResetFilter{
+        background-color: #504d4d;
+        color: white;
+        border-radius: 20px;
+        border: 2px solid #504d4d;
+        box-shadow: 3px 4px 12px rgb(0 0 0 / 25%);
+    }
+    .ResetFilter:hover{
+        background-color:#898686;
+    }
+    .butonFilter:hover{
+        background-color: #87a983;
+    }
     
     /* ------- PAGINADO ------------ */
     
