--- a/client/src/Components/OdersAdmin/OrdersAdmin.css
+++ b/client/src/Components/OdersAdmin/OrdersAdmin.css
@@ -27,6 +27,8 @@
     flex-direction: column;
     align-items: center;
     /* height: fit-content; */
+    margin-top: 2%;
+    margin-bottom: 6%;
     width: 78%;
 }
 
