--- a/client/src/Views/MyCart/MyCart.css
+++ b/client/src/Views/MyCart/MyCart.css
@@ -349,6 +349,8 @@
   
   .cart_item li p {
     font-weight: 700;
+    margin-left: 20%;
+    margin-right: 20%;
   }
   
   .cart_item li span {
@@ -434,11 +436,11 @@
   }
 
   .butonBack{
-    background-color:  rgb(29, 121, 29);
+    background-color:  rgb(71, 16, 143);
     color:white;
-    padding: 15px;
-    border-radius: 20px;
-    border: 2px solid  rgb(29, 121, 29);
+    padding: 10px;
+    border-radius: 15px;
+    border: 2px solid   rgb(71, 16, 143);
     box-shadow: 3px 4px 12px rgb(0, 0 ,0,25%);
   }
   .butonBack Link{
@@ -447,7 +449,7 @@
   }
   .ButonReturn p{
     font-weight: bolder;
-    font-size: 30px;
+    font-size: 26px;
   }
 
   .contador {
